test/langtools/tools/javac/switchexpr/ParserRecovery.out
ParserRecovery.java:9:39: compiler.err.expected: :
ParserRecovery.java:12:31: compiler.err.expected: :
- compiler.note.preview.filename: ParserRecovery.java
- compiler.note.preview.recompile
2 errors
